--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node ./bin/www.js"
   },
   "dependencies": {
-    "axios": "^0.27.2",
     "debug": "^4.3.3",
+    "dota-web-api": "^1.3.6-0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.8",
     "express": "^4.17.3",
